tests/valid_inputs/declaration_stmt.cpp
// test declaration statement

int main() {
	int a;		// decl
	int b = 5;	// init decl
}
