tests/invalid_inputs/sema/paren_init_int.cpp
// test that a simple fundamental type init declarator in parenthesis is caught during semantic analysis

int main() {
	int i(5);
}
